# highline_scout

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COUNTRIES.md  Dockerfile  NEW_LOCATIONS.md  README.md  SPAIN_PRECOMPUTE.md  justfile  pyproject.toml
.claude/skills/adding-country-etls/: SKILL.md
.claude/skills/dispatching-country-etls/: SKILL.md
.github/workflows/: ci.yml
.superpowers/sdd/: final-seo-fix-report.md  task-1-report-density.md  task-1-report.md  task-2-report.md  task-3-report.md
docs/: 2026-07-09-bearing-in-sectors-tol-bug.md  SPAIN_PRECOMPUTE.md
docs/superpowers/plans/: 2026-06-02-highliner-finder.md  2026-06-04-anchors-on-map.md  2026-06-04-backend-reorg.md  2026-06-04-web-triggered-analysis.md  2026-06-12-potential-zones.md  2026-06-14-precompute-catalonia-anchors.md  2026-07-03-zoomed-out-density.md  2026-07-06-copy-viewport-link.md  2026-07-08-react-shadcn-frontend.md  2026-07-08-resumable-parallel-precompute.md  2026-07-09-cnig-request-reduction.md  2026-07-10-all-regions-at-once.md  2026-07-10-border-zone-union-find.md  2026-07-10-national-miteco-restrictions.md  2026-07-11-apply-filters-button.md  2026-07-11-cookieless-analytics.md  2026-07-11-mobile-collapsed-filter-card.md  2026-07-11-posthog-analytics.md  2026-07-12-desktop-restriction-definitions.md  2026-07-12-filter-status-toast.md  2026-07-12-map-view-decomposition.md  2026-07-12-nav-menu-system.md  2026-07-12-nav-redesign.md  2026-07-12-tappable-mobile-filter-card.md  2026-07-12-top-navbar.md  2026-07-13-brand-pill-logo.md  2026-07-13-chunk-etl-module-boundary.md  2026-07-13-restriction-area-mode.md  2026-07-13-settings-menu-order.md  2026-07-13-split-command-mains.md  2026-07-14-country-selection-implementation.md  2026-07-14-density-columnar-cache.md  2026-07-14-density-etl-package-boundary.md  2026-07-14-favicon-implementation.md  2026-07-14-feedback-email-implementation.md  2026-07-14-filtered-density-histograms.md  2026-07-14-lazy-posthog-implementation.md  2026-07-14-seo-foundation-implementation.md  2026-07-14-welcome-modal-logo-implementation.md  2026-07-15-browser-e2e-testing.md  (+20 more)
docs/superpowers/specs/: 2026-06-02-highliner-finder-design.md  2026-06-04-anchors-on-map-design.md  2026-06-04-backend-reorg-design.md  2026-06-04-web-triggered-analysis-design.md  2026-06-12-potential-zones-design.md  2026-06-13-mypy-typechecking-design.md  2026-06-14-precompute-catalonia-anchors-design.md  2026-07-02-zoomed-out-density-design.md  2026-07-04-frontend-localization-design.md  2026-07-04-language-switcher-design.md  2026-07-04-posthog-frontend-analytics-design.md  2026-07-04-restriction-definitions-i18n-design.md  2026-07-06-copy-viewport-link-design.md  2026-07-07-single-precompute-path-design.md  2026-07-08-react-shadcn-frontend-design.md  2026-07-09-cnig-request-reduction-design.md  2026-07-10-all-regions-at-once-design.md  2026-07-10-border-zone-union-find-design.md  2026-07-10-national-miteco-restrictions-design.md  2026-07-11-apply-filters-button-design.md  2026-07-11-cookieless-analytics-design.md  2026-07-11-mobile-collapsed-filter-card-design.md  2026-07-11-posthog-analytics-design.md  2026-07-12-desktop-restriction-definitions-design.md  2026-07-12-filter-status-toast-design.md  2026-07-12-map-view-decomposition-design.md  2026-07-12-nav-menu-system-design.md  2026-07-12-tappable-mobile-filter-card-design.md  2026-07-12-top-navbar-design.md  (+37 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: map-interactions.spec.ts
frontend/src/: App.analytics.test.tsx  App.filters.test.tsx  App.mobile.test.tsx  App.test.tsx  App.tsx  main.test.tsx  main.tsx
highliner/: anchors.py  api.py  app.py  cli.py  config.py  geo.py  ingest.py  pairing.py  pipeline.py  raster.py  restrictions.py  scoring.py  tasks.py  terrain.py  zones.py
highliner/core/: config.py  density.py  geo.py  regions.py  restrictions.py  telemetry.py  tiles.py
highliner/models/: anchor.py  candidate.py  raster.py  zone.py
highliner/repositories/: anchors.py  candidates.py  catalonia_store.py  chunked_store.py  db.py  dtm.py  jobs.py  restrictions.py
highliner/restrictions/: __init__.py  main.py
highliner/router/: analyze.py  anchors.py  density.py  deps.py  jobs.py  regions.py  restrictions.py  serializers.py  zones.py
highliner/server/: app.py  main.py
highliner/services/: catalonia.py  density.py  pairing.py  pipeline.py  precompute.py  restrictions.py  terrain.py  zones.py
highliner/tasks/: analyze.py
scripts/: check_file_length.py  create_hetzner_servers.sh  inspect_restrictions_raw.py  precompute_spain.py  prefetch_ea_lidar.py  sync_country_etl_issues.py
scripts/agent/: agent_etl.sh  create_hetzner_servers.sh  reset_country_etl_issue_bodies.py
tests/: conftest.py  helpers.py  test_anchors.py  test_api.py  test_candidates.py  test_catalonia.py  test_catalonia_store.py  test_characterization.py  test_chunked_store.py  test_cli.py  test_config.py  test_countries.py  test_country_etl_issue_skills.py  test_density.py  test_density_endpoint.py  test_density_histogram.py  test_density_restrictions.py  test_density_store.py  test_density_switzerland.py  test_density_vatican_city.py  test_deps.py  test_dtm_austria.py  test_dtm_cuzk.py  test_dtm_ea.py  test_dtm_os.py  test_dtm_poland.py  test_dtm_swissalti.py  test_e2e_fixture.py  test_feedback.py  test_geo.py  test_health.py  test_ingest.py  test_ingest_rgealti.py  test_integration.py  test_jobstore.py  test_pairing.py  test_partition_cache.py  test_pipeline.py  test_precompute.py  test_precompute_austria.py  (+30 more)
tests/highliner/: __init__.py  test_package.py
tests/integration/: test_full_pipeline.py
tests/project/: __init__.py  test_commands.py  test_country_etl_issue_skills.py  test_etl_entry_points.py
tests/scripts/: __init__.py  test_check_file_length.py  test_create_hetzner_servers.sh  test_prefetch_ea_lidar.py  test_sync_country_etl_issues.py
web/: analytics.js  app.js  i18n.js  index.html  style.css
(+350 files in other folders)
