[project]
name = "highliner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "rasterio",
    "pyproj",
    "shapely",
    "geopandas",
    "pyarrow",
    "requests",
    "huey",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "mypy", "types-requests"]

[project.scripts]
highliner = "highliner.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["highliner*"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["highliner", "tests"]

# Dependencies that ship no type information. Keep this list to the libraries
# mypy actually reports as missing stubs.
[[tool.mypy.overrides]]
module = [
    "rasterio.*",
    "geopandas.*",
    "huey.*",
    "scipy.*",
    "pyarrow.*",
    "shapely.*",
    "affine.*",
    "pandas.*",
]
ignore_missing_imports = true
