[project]
name = "highliner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "rasterio",
    "pyproj",
    "shapely",
    "geopandas",
    "pyarrow",
    "requests",
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "posthog>=7.22.1",
    "sentry-sdk[fastapi]>=2.64.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "mypy", "types-requests", "ruff"]

[project.scripts]
highliner = "highliner.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["highliner*"]

[tool.ruff]
target-version = "py311"
src = ["highliner", "scripts", "tests"]

[tool.ruff.lint]
# pycodestyle + pyflakes (ruff's default) plus import sorting, pyupgrade and
# bugbear. Formatting is left alone: `ruff format` is not part of the workflow.
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["highliner", "tests"]

# Dependencies that ship no type information. Keep this list to the libraries
# mypy actually reports as missing stubs.
[[tool.mypy.overrides]]
module = [
    "rasterio.*",
    "geopandas.*",
    "scipy.*",
    "pyarrow.*",
    "shapely.*",
    "affine.*",
    "pandas.*",
]
ignore_missing_imports = true
