[project]
name = "highliner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "rasterio",
    "pyproj",
    "shapely",
    "geopandas",
    "pyarrow",
    "requests",
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "posthog>=7.22.1",
    "sentry-sdk[fastapi]>=2.64.0",
    "openpyxl>=3.1.5",
    "py7zr>=1.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "mypy",
    "types-requests",
    "ruff",
    "vulture",
    "pytest-cov",
]

[project.scripts]
highliner-server = "highliner.server.main:main"
highliner-etl-chunk = "highliner.etls.chunk.spain:main"
highliner-etl-density = "highliner.etls.density.spain:main"
highliner-restrictions = "highliner.etls.restriction.spain:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["highliner*"]

[tool.coverage.run]
branch = true
source = ["highliner", "scripts"]

[tool.coverage.report]
fail_under = 81.10
precision = 2

[tool.ruff]
target-version = "py311"
src = ["highliner", "scripts", "tests"]

[tool.ruff.lint]
# pycodestyle + pyflakes (ruff's default) plus import sorting, pyupgrade,
# bugbear, and complexity caps (mccabe + the pylint PLR05xx family).
# Formatting is left alone: `ruff format` is not part of the workflow.
select = ["E", "F", "I", "UP", "B", "C90", "PLR0912", "PLR0913", "PLR0915"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
# Avoid environment-dependent package discovery in fresh CI worktrees.
known-first-party = ["highliner", "tests"]

[tool.ruff.lint.pylint]
# Defaults, pinned so the caps are visible: branches 12, args 5, statements 50.
max-branches = 12
max-args = 5
max-statements = 50

[tool.vulture]
# Dead-code report: names defined but never referenced. Ruff's F rules only see
# within a scope (unused imports/locals); vulture diffs definitions against uses
# across the whole tree, which is what catches an uncalled function.
# Tests are deliberately NOT scanned: a symbol that only its own test calls is
# dead product code, and including tests here would hide exactly that.
paths = ["highliner", "scripts"]
# 60 is the floor for unused functions/variables/attributes. Anything higher
# only reports unused imports, which ruff (F401) already covers.
min_confidence = 60

# Vulture resolves references statically, so anything a framework reaches by
# convention reads as dead. Each entry below is called, just not by our code.
ignore_decorators = [
    "@router.*",          # FastAPI dispatches route handlers by decorator
    "@field_validator",   # pydantic calls field validators during model parsing
]
ignore_names = [
    "model_config",     # pydantic-settings reads it off the Settings class
    "dispatch",         # Starlette's BaseHTTPMiddleware entry point
    "api_key",          # set on the posthog module, read by its setup()
    "cls",              # bound by @classmethod; validators don't touch it
    # Scalar reference implementations for the vectorized density-store masks.
    "bucket_overlaps", "is_excluded",
    # LayerSpec TypedDict keys: declared for typing, read as dict subscripts.
    "label", "color", "name_field", "tooltip", "highlight",
    # TileAsset TypedDict key: serialized to JSON and read as a dict subscript.
    "href",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["highliner", "tests"]

# Dependencies that ship no type information. Keep this list to the libraries
# mypy actually reports as missing stubs.
[[tool.mypy.overrides]]
module = [
    "rasterio.*",
    "geopandas.*",
    "scipy.*",
    "pyarrow.*",
    "shapely.*",
    "affine.*",
    "pandas.*",
]
ignore_missing_imports = true
